2013-08-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Print progress status.

2013-08-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Fix for not supported platform.

2013-08-14  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/tape-device.c: Get in error state if the tape drive is in
	  fixed block size and it is different than the tapetype size.

2013-08-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Print applicationstdout to debug file and
	  stderr.

2013-08-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Process.pm: Be less scrict on perl binary name.

2013-08-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, server-src/holding.c: Cast getpid() to int
	  before printing it.

2013-08-08  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm: Handle failed dump.

2013-07-29  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: Run application after filters.

2013-07-29  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsuntar.pl (command_estimate): Change order for
	  reading the pipe. Fix perl warnings.

2013-07-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl: Accept multiple options to --autolabel
	  argument.

2013-07-18  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Undo previous patch.
	* device-src/s3-device.c: Verify the bucket can be used as a subdomain
	  if S3-SUBDOMAIN is set.

2013-07-17  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: lowercase the bucket for the auth_string.

2013-07-04  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Typo.

2013-07-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c: register types at initialization.

2013-07-03  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Remove from correct queue.
